# sample_cmake_project

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cmake_hello_world.cpp
src/app/include/: cmake_hello_world.hpp
src/foo/: CMakeLists.txt  foo.cpp
test/: CMakeLists.txt  foo_test.cpp
